--- a/django/MarketProject/MarketApp/templates/MarketApp/base.html
+++ b/django/MarketProject/MarketApp/templates/MarketApp/base.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Heroic Features - Start Bootstrap Template</title>
+  <title>The Market App</title>
 
   <!-- Bootstrap core CSS -->
   <link href="{% static 'MarketApp/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
