--- a/django/MarketProject/MarketApp/templates/MarketApp/home.html
+++ b/django/MarketProject/MarketApp/templates/MarketApp/home.html
@@ -9,9 +9,9 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3">A Warm Welcome!</h1>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
-      <a href="#" class="btn btn-primary btn-lg">Call to action!</a>
+      <h1 class="display-4">Ready for checking out?</h1>
+      <p class="lead">Have you place all yours items in the cart? Well, it's the check out moment, please push the button and confirm your shopping cart. When you finish the process, your purchase will be saved and the cart will be empty again.</p>      
+      <a href="#" class="btn btn-primary btn-lg"><img src="{% static 'MarketApp/img/logo3.gif' %}" alt="">Checkout!</a>
     </header>
 
     <!-- Page Features -->
@@ -24,11 +24,11 @@
               {% static "" as baseUrl %}
               <img class="card-img-top" src="{{ baseUrl }}MarketApp/img/{{ m.name }}.bmp" alt="">
               <div class="card-body">
-                <h4 class="card-title">{{ m.name }}</h4>
-                <p class="card-text">Que está por la zona: <strong>{{ m.place }}</strong></p>
+                <h4 class="card-title"><strong>{{ m.name }}</strong></h4>
+                <p class="card-text">Situado en la zona: <strong>{{ m.place }}</strong></p>
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-primary">Check it out!</a>
+                <a href="#" class="btn btn-primary">Take a look!</a>
               </div>
             </div>
           </div>
