url parameter products

--- a/django/MarketProject/MarketApp/templates/MarketApp/home.html
+++ b/django/MarketProject/MarketApp/templates/MarketApp/home.html
@@ -27,8 +27,8 @@
                 <h4 class="card-title"><strong>{{ m.name }}</strong></h4>
                 <p class="card-text">Situado en la zona: <strong>{{ m.place }}</strong></p>
               </div>
-              <div class="card-footer">
-                <a href="#" class="btn btn-primary">Take a look!</a>
+              <div class="card-footer">                              
+                <a href="{% url 'Products' market=m.name %}" class="btn btn-primary">Take a look!</a>
               </div>
             </div>
           </div>
