--- a/django/MarketProject/MarketApp/templates/MarketApp/home.html
+++ b/django/MarketProject/MarketApp/templates/MarketApp/home.html
@@ -28,7 +28,7 @@
                 <p class="card-text">Situado en la zona: <strong>{{ m.place }}</strong></p>
               </div>
               <div class="card-footer">                              
-                <a href="{% url 'Products' market=m.name %}" class="btn btn-primary">Take a look!</a>
+                <a href="{% url 'Products' market=m.id %}" class="btn btn-primary">Take a look!</a>
               </div>
             </div>
           </div>
