cart and history carts

--- a/django/MarketProject/MarketApp/templates/MarketApp/base.html
+++ b/django/MarketProject/MarketApp/templates/MarketApp/base.html
@@ -41,10 +41,13 @@
             <a class="nav-link" href="{% url 'Markets' %}">Markets</a>
           </li>
           <li class="nav-item {% if request.path == '/cart' %}active{% endif %}">
-            <a class="nav-link" href="{% url 'Cart' %}">Cart</a>
+            <a class="nav-link" href="{% url 'Cart' clickedProduct=None mode=None %}">Cart</a>
           </li>
           <li class="nav-item {% if request.path == '/products' %}active{% endif %}">
             <a class="nav-link" href="{% url 'Products' market=None %}">Products</a>
+          </li>
+          <li class="nav-item {% if request.path == '/historyCart' %}active{% endif %}">
+            <a class="nav-link" href="{% url 'HistoryCarts' %}">History Cart</a>
           </li>
         </ul>
       </div>
