--- a/django/MarketProject/MarketApp/templates/MarketApp/cart.html
+++ b/django/MarketProject/MarketApp/templates/MarketApp/cart.html
@@ -1,9 +1,38 @@
 {% extends "MarketApp/base.html" %}
 
 {% load static %}
-
+<h1 class="display-4">Finish your buy! {{ total }}€</h1>
 {% block content %}
+ <!-- Page Content -->
+<div class="container">  
 
-<div><p></p></div>
+    <!-- Jumbotron Header -->
+    <header class="jumbotron my-4">
+        <h1 class="display-4">Are you finished? The price of your buy is: {{ total }}€</h1>
+        <a href="{% url 'Cart' clickedProduct=None mode='delete_all' %}" class="btn btn-primary btn-lg"><img src="{% static 'MarketApp/img/logo3.gif' %}" alt="">Checkout!</a>
+    </header>
+
+    <!-- Page Features -->
+    <div class="row text-center">    
+        {% for p in products %}       
+            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="card h-100">
+                <div class="card-body">
+                <h4 class="card-title"><strong>{{ p.product.market.name }}</strong></h4>
+                <h3 class="card-title"><strong>{{ p.product.name }}</strong></h3>
+                <p class="card-text">Con un precio de: <strong>{{ p.product.price }}€</strong></p>
+                </div>
+                <div class="card-footer">
+                <a href="{% url 'Cart' clickedProduct=p.id mode='delete' %}" class="btn btn-primary">Delete!</a>
+                </div>
+            </div>
+            </div>
+
+        {% endfor %}    
+    
+    </div>
+    <!-- /.row -->
+</div>
+<!-- /.container -->
 
 {% endblock %}
