--- a/django/MarketProject/MarketApp/templates/MarketApp/home.html
+++ b/django/MarketProject/MarketApp/templates/MarketApp/home.html
@@ -22,7 +22,8 @@
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="card h-100">
               {% static "" as baseUrl %}
-              <img class="card-img-top" src="{{ baseUrl }}MarketApp/img/{{ m.name }}.bmp" alt="">
+              <!-- <img class="card-img-top" src="{{ baseUrl }}MarketApp/img/{{ m.name }}.bmp" alt=""> -->
+              <img class="card-img-top" src="{{ baseUrl }}MarketApp/img/{{ m.imagen }}" alt="">
               <div class="card-body">
                 <h4 class="card-title"><strong>{{ m.name }}</strong></h4>
                 <p class="card-text">Situado en la zona: <strong>{{ m.place }}</strong></p>
