--- a/django/MarketProject/MarketApp/templates/MarketApp/historyCarts.html
+++ b/django/MarketProject/MarketApp/templates/MarketApp/historyCarts.html
@@ -4,6 +4,25 @@
 
 {% block content %}
 
-<div><p></p></div>
+<!-- Page Content -->
+<div class="container">
+
+  <!-- Jumbotron Header -->
+  <header class="jumbotron my-4">
+    <h1 class="display-4">Ready for checking out?</h1>
+    <p class="lead">Have you place all yours items in the cart? Well, it's the check out moment, please push the button and confirm your shopping cart. When you finish the process, your purchase will be saved and the cart will be empty again.</p>      
+    <a href="#" class="btn btn-primary btn-lg"><img src="{% static 'MarketApp/img/logo3.gif' %}" alt="">Checkout!</a>
+  </header>
+
+  <input type=text list=carts >
+  <datalist id=carts>
+    {% for c in carts %}
+    <option> Cart date: {{ c.created }}
+    {% endfor %}
+  </datalist>
+
+    
+</div>
+<!-- /.container -->
 
 {% endblock %}
