--- a/django/MarketProject/MarketApp/templates/MarketApp/historyCarts.html
+++ b/django/MarketProject/MarketApp/templates/MarketApp/historyCarts.html
@@ -9,19 +9,27 @@
 
   <!-- Jumbotron Header -->
   <header class="jumbotron my-4">
-    <h1 class="display-4">Ready for checking out?</h1>
+    <h1 class="display-4">Review your historic Carts</h1>
     <p class="lead">Have you place all yours items in the cart? Well, it's the check out moment, please push the button and confirm your shopping cart. When you finish the process, your purchase will be saved and the cart will be empty again.</p>      
-    <a href="#" class="btn btn-primary btn-lg"><img src="{% static 'MarketApp/img/logo3.gif' %}" alt="">Checkout!</a>
+    <form action="{% url 'HistoryCarts' idSelect=0 %}">
+      <select  name="carts" id="carts" class="btn btn-primary">  
+        <option value="" selected>--------------</option>
+        {% for c in carts %}
+        <option value="{{ c.id }}">{{ c.created }}</option>    
+        {% endfor %}
+      </select>
+      <input type="submit" value="Look at this" class="btn btn-primary">
+      <br><br>
+    </form>
   </header>
 
-  <input type=text list=carts >
-  <datalist id=carts>
-    {% for c in carts %}
-    <option> Cart date: {{ c.created }}
-    {% endfor %}
-  </datalist>
+  <form action="/historyCarts/" method="POST">{% csrf_token %}
+    <table>
+        {{ form.as_table }}
+    </table>
+    <input type="submit" value="Enviar">
+  </form>
 
-    
 </div>
 <!-- /.container -->
 
