--- a/django/MarketProject/MarketApp/templates/MarketApp/historyCarts.html
+++ b/django/MarketProject/MarketApp/templates/MarketApp/historyCarts.html
@@ -10,7 +10,7 @@
   <!-- Jumbotron Header -->
   <header class="jumbotron my-4">
     <h1 class="display-4">Review your historic Carts</h1>
-    <p class="lead">Have you place all yours items in the cart? Well, it's the check out moment, please push the button and confirm your shopping cart. When you finish the process, your purchase will be saved and the cart will be empty again.</p>
+    <p class="lead">You can review your old completed carts. Just select the date and click the botton to take a look, it will showed all of the products, its prices and the total price of the selected cart. </p>
   
     <form action="{% url 'HistoryCarts' %}" method="POST">  
       {% csrf_token %}
