--- a/django/Proyectoweb/blog/templates/blog/blog.html
+++ b/django/Proyectoweb/blog/templates/blog/blog.html
@@ -15,11 +15,27 @@
                 <span class="section-heading-lower">{{ post.titulo }}</span>
                 <span class="section-heading-upper">{{ post.contenido }}</span>
             </h2>
+            <div style="text-align: left; font-size: 0.8em;">
+                Autor: {{ post.autor }}
+            </div>
         </div>
     </div>
     </div>
 </section>
 
 {% endfor %}
+
+<section>
+    <div style="width: 60%; margin: auto; text-align: center; color: white">
+        Categorías: 
+        
+        {% for post in posts %}
+            {% for categoria in post.categorias.all %}
+                 &nbsp;&nbsp; {{ categoria.nombre }} &nbsp;&nbsp;
+            {% endfor %}
+        {% endfor %}
+
+    </div>
+</section>
 
 {% endblock %}
